--- a/PKD_Example.yml
+++ b/PKD_Example.yml
@@ -28,6 +28,10 @@ user_agents:
 
 registry_keys:
   - HKLM/Software/Example
+  
+storage_locations:
+  - %systemdrive%\program files
+  - %programdata%\examplesoft\
 
 process_details:
   unobvious_p2.exe:
